introduce workaround for missing colors
added a workaround for missing survey colors - this includes "averaging" the multiple response questions and adding a dummy color if a label is missing - potentially from churn on survey updates, this should probably not be permanent

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -163,7 +163,7 @@
     "        sep = \"\\n\"\n",
     "        \n",
     "        final = sep.join(l_labels)\n",
-    "        print(label, final)\n",
+    "        \n",
     "        return final\n",
     "    except:\n",
     "        return label #probably a row without an answer\n",
@@ -229,6 +229,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52474e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO get the bluetooth modes\n",
+    "#HACK to get the bluetooth mode\n",
+    "\n",
+    "# import emission.storage.decorations.trip_queries as esdt\n",
+    "# import emission.storage.timeseries.abstract_timeseries as esta\n",
+    "\n",
+    "# def get_confirmed_mode(trip, ble_vehicle_mapping):\n",
+    "# #     ts = esta.TimeSeries.get_time_series(trip.user_id)\n",
+    "# #     trip_obj = ts.get_entry_from_id(\"analysis/cleaned_trip\", trip._id)\n",
+    "# #     matching_beacon = esdt.get_user_input_for_timeline_entry(ts, trip_obj, \"background/bluetooth_ble\")\n",
+    "    \n",
+    "#     matching_beacon = esdt.get_user_input_for_trip(\"analysis/confirmed_trip\", trip._id, trip.user_id, \"background/bluetooth_ble\")\n",
+    "    \n",
+    "\n",
+    "#     return matching_beacon\n",
+    "\n",
+    "# all_confirmed_trips.iloc[6].user_input\n",
+    "# all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
+    "# print(get_confirmed_mode(all_confirmed_trips.iloc[6], {}))\n",
+    "# all_confirmed_trips['confirmedMode'] = all_confirmed_trips.apply(lambda trip: get_confirmed_mode(trip, {}), axis=1)\n",
+    "\n",
+    "# print(all_confirmed_trips.confirmedMode.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7b7001a9",
    "metadata": {},
    "outputs": [],
@@ -242,8 +273,7 @@
     "from collections import OrderedDict\n",
     "def mapping_color_surveys(dic_options):\n",
     "    dictionary_values = (list(OrderedDict.fromkeys(dic_options.values())))\n",
-    "#     dictionary_values = list(dic_options.keys())\n",
-    "\n",
+    "    \n",
     "    colors = {}\n",
     "    for i in range(len(dictionary_values)):\n",
     "        colors[dictionary_values[i]] = plt.cm.tab10.colors[i%10]\n",
@@ -251,8 +281,6 @@
     "    return colors\n",
     "\n",
     "color_map = mapping_color_surveys(opt_dict)\n",
-    "\n",
-    "print(\"\\n\", color_map)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
@@ -266,25 +294,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#TODO - work on the total dfs\n",
     "#create the total dfs\n",
-    "total_dfs = {}\n",
-    "#for conditional surveys!\n",
-    "wrapped_config = {'survey_info': survey_info}\n",
-    "if 'buttons' in survey_info.keys():\n",
-    "    all_composite_trips['survey_name_prompted'] = all_composite_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
+    "# total_dfs = {}\n",
+    "# #for conditional surveys!\n",
+    "# wrapped_config = {'survey_info': survey_info}\n",
+    "# if 'buttons' in survey_info.keys():\n",
+    "#     all_confirmed_trips['survey_name_prompted'] = all_confirmed_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
     "    \n",
-    "    for survey_name in list(sheet_list.keys()):\n",
-    "        if survey_name in all_composite_trips['survey_name_prompted'].unique():\n",
-    "            total_dfs[survey_name] = all_composite_trips[all_composite_trips['survey_name_prompted'] == survey_name]\n",
-    "        else:\n",
-    "            #never prompted\n",
-    "            total_dfs[survey_name] = pd.DataFrame()\n",
-    "else:\n",
-    "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "    total_dfs[survey_name] = all_composite_trips\n",
+    "#     for survey_name in list(sheet_list.keys()):\n",
+    "#         if survey_name in all_confirmed_trips['survey_name_prompted'].unique():\n",
+    "#             total_dfs[survey_name] = all_confirmed_trips[all_confirmed_trips['survey_name_prompted'] == survey_name]\n",
+    "#         else:\n",
+    "#             #never prompted\n",
+    "#             total_dfs[survey_name] = pd.DataFrame()\n",
+    "# else:\n",
+    "#     survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
+    "#     total_dfs[survey_name] = all_confirmed_trips\n",
     "    \n",
-    "for key in total_dfs.keys():\n",
-    "    print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")"
+    "# for key in total_dfs.keys():\n",
+    "#     print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")"
    ]
   },
   {
@@ -298,6 +327,39 @@
     "#https://stackoverflow.com/questions/24390645/python-pandas-merge-samed-name-columns-in-a-dataframe\n",
     "def sjoin(x): return ';'.join(x[x.notnull()].astype(str))\n",
     "df_responses = df_responses.groupby(level=0, axis=1).apply(lambda x: x.apply(sjoin, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e91a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#workaround missing colors\n",
+    "def get_survey_colors(labels, existing_map):\n",
+    "    color_map = {}\n",
+    "    for label in labels:\n",
+    "        l_labels = label.split(\"\\n\")\n",
+    "        color = (0,0,0)\n",
+    "        n = 0\n",
+    "        for i in range(len(l_labels)):\n",
+    "            try:\n",
+    "                color = tuple(map(lambda i, j: i + j, color, existing_map[l_labels[i]]))\n",
+    "            except:\n",
+    "                print(\"missing color\")\n",
+    "                color = tuple(map(lambda i, j: i + j, color, (0.1, 0.2, 0.5)))\n",
+    "            \n",
+    "            n += 1\n",
+    "            \n",
+    "        print(color, n)\n",
+    "        color = [x/n for x in color]\n",
+    "        \n",
+    "        color_map[label] = color\n",
+    "    \n",
+    "    print(color_map)\n",
+    "    \n",
+    "    return color_map"
    ]
   },
   {
@@ -346,10 +408,8 @@
     "#             values = quest_frame[col].value_counts(dropna=True).tolist()       \n",
     "#             plot_df = pd.DataFrame({\"label\": labels, \"value\": values}).set_index('label')\n",
     "            \n",
-    "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, color_map, debug_df)\n",
-    "            \n",
+    "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, get_survey_colors(list(plot_df.index.values) ,color_map), debug_df)\n",
     "            set_title_and_save(fig, text_results, plot_title, filename)\n",
-    "            \n",
     "\n",
     "        except:\n",
     "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
@@ -373,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
