add todo comments, remove old code

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -374,6 +374,7 @@
     "#create one plot per question in the survey\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
+    "    #TODO - fix debug df\n",
     "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
     "    debug_df = pd.DataFrame()\n",
     "\n",
@@ -387,6 +388,7 @@
     "        try:\n",
     "            quest_frame = df_responses.copy()\n",
     "            \n",
+    "            #TODO - fix quality text\n",
     "#             qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
     "            qual_text = \"debug qual text later\"\n",
     "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
@@ -396,17 +398,11 @@
     "            # We will have text results corresponding to the axes for simplicity and consistency\n",
     "            \n",
     "            quest_frame[col] = quest_frame[col].apply(lambda x: traslate_options(x, opt_dict))\n",
-    "#             quest_frame[col] = traslate_options(quest_frame[col], opt_dict)\n",
     "            text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]  \n",
     "\n",
     "            plot_df = quest_frame.groupby(['survey_name', col]).count().reset_index()\n",
     "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
     "            plot_df = plot_df.set_index(col)[['start']]\n",
-    "            \n",
-    "#             labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
-    "#             labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
-    "#             values = quest_frame[col].value_counts(dropna=True).tolist()       \n",
-    "#             plot_df = pd.DataFrame({\"label\": labels, \"value\": values}).set_index('label')\n",
     "            \n",
     "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, get_survey_colors(list(plot_df.index.values) ,color_map), debug_df)\n",
     "            set_title_and_save(fig, text_results, plot_title, filename)\n",
