update how the dataframe is formed
taking into account https://github.com/e-mission/em-public-dashboard/pull/124#discussion_r1590180144

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "year = 2024\n",
     "month = 4\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = 'e-bike'\n",
@@ -16,6 +18,8 @@
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
     "survey_info =  {}"
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-onboarding-v1.xml\",\n",
+    "        \"version\": 1,\n",
    ]
   },
   {
@@ -121,31 +125,30 @@
     "    return opt_dict, quest_dict\n",
     "\n",
     "\n",
+    "def get_response_to_normalize(row):\n",
+    "    data_key = list(row.user_input['trip_user_input']['data']['jsonDocResponse'].keys())[0]\n",
+    "    response = row.user_input['trip_user_input']['data']['jsonDocResponse'][data_key]\n",
+    "\n",
+    "    return response \n",
+    "\n",
     "#input: dataframe containing all trips that have non-blank user_input\n",
     "#output: dataframe with questions in the columns and answers in the rows\n",
     "#for loop will run n survey responses times (this could get big!)\n",
     "def create_dataframe(df_trips_w_surveys):\n",
     "    df = df_trips_w_surveys.reset_index()\n",
-    "    rows = []\n",
-    "    for i in range(len(df)):\n",
-    "        data_key = list(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'].keys())[0]\n",
-    "        row = pd.json_normalize(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'][data_key])\n",
-    "        row['user_id'] = df.loc[i].user_id\n",
-    "        row['survey_name'] = df.loc[i]['survey_name']\n",
-    "        rows.append(row)\n",
-    "        \n",
-    "    if len(rows) > 0:\n",
-    "        df = pd.concat(rows)\n",
+    "    \n",
+    "    #normalize the survey responses\n",
+    "    normalized_responses = pd.json_normalize(df.apply(get_response_to_normalize))\n",
+    "    normalized_responses['survey_name'] = df.apply(lambda x: x.survey_name)\n",
     "\n",
-    "        rename_nests = {}\n",
-    "        for col in df.columns:\n",
-    "            rename_nests[col] = col.split('.')[-1]\n",
+    "    #update the column names\n",
+    "    rename_nests = {}\n",
+    "    for col in normalized_responses.columns:\n",
+    "        rename_nests[col] = normalized_responses.split('.')[-1]\n",
     "\n",
-    "        df = df.rename(columns=rename_nests)\n",
-    "    else:\n",
-    "        df = pd.DataFrame()\n",
+    "    normalized_responses = normalized_responses.rename(columns=rename_nests)\n",
     "\n",
-    "    return df\n",
+    "    return normalized_responses\n",
     "\n",
     "#input: list of labels that will end up on the chart\n",
     "#output: translated to readable list, with multiples handled\n",
