reintroduce "assigned" surveys, update quality text

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -140,6 +140,8 @@
     "    #normalize the survey responses\n",
     "    normalized_responses = pd.json_normalize(df.apply(get_response_to_normalize, axis=1))\n",
     "    normalized_responses['survey_name'] = df['survey_name']\n",
+    "    normalized_responses['user_id'] = df['user_id']\n",
+    "    \n",
     "\n",
     "    #update the column names\n",
     "    rename_nests = {}\n",
@@ -183,7 +185,43 @@
     "            },\n",
     "        orient='index', columns=[\"value\"])\n",
     "    \n",
-    "    return debug_df"
+    "    return debug_df\n",
+    "\n",
+    "#color dictionary\n",
+    "from collections import OrderedDict\n",
+    "def mapping_color_surveys(dic_options):\n",
+    "    dictionary_values = (list(OrderedDict.fromkeys(dic_options.values())))\n",
+    "    \n",
+    "    colors = {}\n",
+    "    for i in range(len(dictionary_values)):\n",
+    "        colors[dictionary_values[i]] = plt.cm.tab10.colors[i%10]\n",
+    "    \n",
+    "    return colors\n",
+    "\n",
+    "#workaround missing colors\n",
+    "def get_survey_colors(labels, existing_map):\n",
+    "    color_map = {}\n",
+    "    for label in labels:\n",
+    "        l_labels = label.split(\"\\n\")\n",
+    "        color = (0,0,0)\n",
+    "        n = 0\n",
+    "        for i in range(len(l_labels)):\n",
+    "            try:\n",
+    "                color = tuple(map(lambda i, j: i + j, color, existing_map[l_labels[i]]))\n",
+    "            except:\n",
+    "                print(\"missing color\")\n",
+    "                color = tuple(map(lambda i, j: i + j, color, (0.1, 0.2, 0.5)))\n",
+    "            \n",
+    "            n += 1\n",
+    "            \n",
+    "        print(color, n)\n",
+    "        color = [x/n for x in color]\n",
+    "        \n",
+    "        color_map[label] = color\n",
+    "    \n",
+    "    print(color_map)\n",
+    "    \n",
+    "    return color_map"
    ]
   },
   {
@@ -226,44 +264,15 @@
     "    survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
     "    \n",
     "else:\n",
-    "    survey_trips = pd.DataFrame()"
+    "    survey_trips = pd.DataFrame()\n",
+    "\n",
+    "survey_trips.groupby('survey_name').count()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52474e83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO get the bluetooth modes\n",
-    "#HACK to get the bluetooth mode\n",
-    "\n",
-    "# import emission.storage.decorations.trip_queries as esdt\n",
-    "# import emission.storage.timeseries.abstract_timeseries as esta\n",
-    "\n",
-    "# def get_confirmed_mode(trip, ble_vehicle_mapping):\n",
-    "# #     ts = esta.TimeSeries.get_time_series(trip.user_id)\n",
-    "# #     trip_obj = ts.get_entry_from_id(\"analysis/cleaned_trip\", trip._id)\n",
-    "# #     matching_beacon = esdt.get_user_input_for_timeline_entry(ts, trip_obj, \"background/bluetooth_ble\")\n",
-    "    \n",
-    "#     matching_beacon = esdt.get_user_input_for_trip(\"analysis/confirmed_trip\", trip._id, trip.user_id, \"background/bluetooth_ble\")\n",
-    "    \n",
-    "\n",
-    "#     return matching_beacon\n",
-    "\n",
-    "# all_confirmed_trips.iloc[6].user_input\n",
-    "# all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
-    "# print(get_confirmed_mode(all_confirmed_trips.iloc[6], {}))\n",
-    "# all_confirmed_trips['confirmedMode'] = all_confirmed_trips.apply(lambda trip: get_confirmed_mode(trip, {}), axis=1)\n",
-    "\n",
-    "# print(all_confirmed_trips.confirmedMode.unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b7001a9",
+   "id": "c751b118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,17 +280,6 @@
     "opt_dict, quest_dict = build_dictionaries(sheet_list)\n",
     "print(\"Questions dictionary:\\n\",quest_dict)\n",
     "print(\"Options dictionary:\\n\", opt_dict)\n",
-    "\n",
-    "#color dictionary\n",
-    "from collections import OrderedDict\n",
-    "def mapping_color_surveys(dic_options):\n",
-    "    dictionary_values = (list(OrderedDict.fromkeys(dic_options.values())))\n",
-    "    \n",
-    "    colors = {}\n",
-    "    for i in range(len(dictionary_values)):\n",
-    "        colors[dictionary_values[i]] = plt.cm.tab10.colors[i%10]\n",
-    "    \n",
-    "    return colors\n",
     "\n",
     "color_map = mapping_color_surveys(opt_dict)\n",
     "\n",
@@ -297,26 +295,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO - work on the total dfs\n",
     "#create the total dfs\n",
-    "# total_dfs = {}\n",
-    "# #for conditional surveys!\n",
-    "# wrapped_config = {'survey_info': survey_info}\n",
-    "# if 'buttons' in survey_info.keys():\n",
-    "#     all_confirmed_trips['survey_name_prompted'] = all_confirmed_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
+    "total_dfs = {}\n",
+    "#for conditional surveys!\n",
+    "wrapped_config = {'survey_info': survey_info}\n",
+    "if 'buttons' in survey_info.keys():\n",
+    "    all_confirmed_trips = all_confirmed_trips[all_confirmed_trips['ble_sensed_summary'].notna()]\n",
+    "    all_confirmed_trips[\"confirmedMode_baseMode\"] = all_confirmed_trips.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
+    "    all_confirmed_trips['survey_name_prompted'] = all_confirmed_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
     "    \n",
-    "#     for survey_name in list(sheet_list.keys()):\n",
-    "#         if survey_name in all_confirmed_trips['survey_name_prompted'].unique():\n",
-    "#             total_dfs[survey_name] = all_confirmed_trips[all_confirmed_trips['survey_name_prompted'] == survey_name]\n",
-    "#         else:\n",
-    "#             #never prompted\n",
-    "#             total_dfs[survey_name] = pd.DataFrame()\n",
-    "# else:\n",
-    "#     survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "#     total_dfs[survey_name] = all_confirmed_trips\n",
-    "    \n",
-    "# for key in total_dfs.keys():\n",
-    "#     print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")"
+    "    for survey_name in list(sheet_list.keys()):\n",
+    "        if survey_name in all_confirmed_trips['survey_name_prompted'].unique():\n",
+    "            total_dfs[survey_name] = all_confirmed_trips[all_confirmed_trips['survey_name_prompted'] == survey_name]\n",
+    "        else:\n",
+    "            #never prompted\n",
+    "            total_dfs[survey_name] = pd.DataFrame()\n",
+    "else:\n",
+    "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
+    "    total_dfs[survey_name] = all_confirmed_trips\n",
+    "\n",
+    "for key in total_dfs.keys():\n",
+    "    if len(total_dfs[key]) > 0:\n",
+    "        print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")\n",
+    "    else:\n",
+    "        print(key, \":\", len(total_dfs[key]), \"trips\")"
    ]
   },
   {
@@ -335,39 +337,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e91a23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#workaround missing colors\n",
-    "def get_survey_colors(labels, existing_map):\n",
-    "    color_map = {}\n",
-    "    for label in labels:\n",
-    "        l_labels = label.split(\"\\n\")\n",
-    "        color = (0,0,0)\n",
-    "        n = 0\n",
-    "        for i in range(len(l_labels)):\n",
-    "            try:\n",
-    "                color = tuple(map(lambda i, j: i + j, color, existing_map[l_labels[i]]))\n",
-    "            except:\n",
-    "                print(\"missing color\")\n",
-    "                color = tuple(map(lambda i, j: i + j, color, (0.1, 0.2, 0.5)))\n",
-    "            \n",
-    "            n += 1\n",
-    "            \n",
-    "        print(color, n)\n",
-    "        color = [x/n for x in color]\n",
-    "        \n",
-    "        color_map[label] = color\n",
-    "    \n",
-    "    print(color_map)\n",
-    "    \n",
-    "    return color_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7bcebeef",
    "metadata": {
     "scrolled": false
@@ -377,29 +346,23 @@
     "#create one plot per question in the survey\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
-    "    #TODO - fix debug df\n",
-    "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
-    "    debug_df = pd.DataFrame()\n",
+    "    debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
     "\n",
     "    for col in quest_dict[survey_name].keys():\n",
-    "        \n",
-    "        print(col)\n",
-    "        \n",
     "        filename = col + file_suffix\n",
     "        plot_title_no_quality = survey_name + \"\\n\" + quest_dict[survey_name][col]\n",
     "\n",
     "        try:\n",
     "            quest_frame = df_responses.copy()\n",
+    "            quest_frame = quest_frame[quest_frame['survey_name'] == survey_name]\n",
+    "            quest_frame[col].replace('', np.nan, inplace=True)\n",
+    "            quest_frame.dropna(subset=[col], inplace=True)\n",
     "            \n",
-    "            #TODO - fix quality text\n",
-    "#             qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
-    "            qual_text = \"debug qual text later\"\n",
+    "            qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
     "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
     "            \n",
     "            fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "            \n",
-    "            # We will have text results corresponding to the axes for simplicity and consistency\n",
-    "            \n",
+    "\n",
     "            quest_frame[col] = quest_frame[col].apply(lambda x: traslate_options(x, opt_dict))\n",
     "            text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]  \n",
     "\n",
