--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -29,13 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
+    "import collections.defaultdict as defaultdict\n",
+    "import collections.OrderedDict as OrderedDict\n",
     "import urllib.request\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from xml.dom import minidom\n",
+    "import xml.dom.minidom as minidom\n",
     "\n",
-    "from emcommon.survey import conditional_surveys\n",
+    "import emcommon.survey.conditional_surveys as conditional_surveys\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
