update import styles

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import collections.defaultdict as defaultdict\n",
-    "import collections.OrderedDict as OrderedDict\n",
+    "import collections\n",
     "import urllib.request\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -189,9 +188,8 @@
     "    return debug_df\n",
     "\n",
     "#color dictionary\n",
-    "from collections import OrderedDict\n",
     "def mapping_color_surveys(dic_options):\n",
-    "    dictionary_values = (list(OrderedDict.fromkeys(dic_options.values())))\n",
+    "    dictionary_values = (list(collections.OrderedDict.fromkeys(dic_options.values())))\n",
     "    \n",
     "    colors = {}\n",
     "    for i in range(len(dictionary_values)):\n",
