remove reliance on "total" sets
due to ongoing debugging of the ble summaries and their processing, removing reliance on that for now. Concretely, this means that there is no quality text and the debug_df is just empty

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -294,30 +294,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create the total dfs\n",
-    "total_dfs = {}\n",
-    "#for conditional surveys!\n",
-    "wrapped_config = {'survey_info': survey_info}\n",
-    "if 'buttons' in survey_info.keys():\n",
-    "    all_confirmed_trips = all_confirmed_trips[all_confirmed_trips['ble_sensed_summary'].notna()]\n",
-    "    all_confirmed_trips[\"confirmedMode_baseMode\"] = all_confirmed_trips.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
-    "    all_confirmed_trips['survey_name_prompted'] = all_confirmed_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
+    "# #create the total dfs\n",
+    "# total_dfs = {}\n",
+    "# #for conditional surveys!\n",
+    "# wrapped_config = {'survey_info': survey_info}\n",
+    "# if 'buttons' in survey_info.keys():\n",
+    "#     all_confirmed_trips = all_confirmed_trips[all_confirmed_trips['ble_sensed_summary'].notna()]\n",
+    "#     all_confirmed_trips[\"confirmedMode_baseMode\"] = all_confirmed_trips.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
+    "#     all_confirmed_trips['survey_name_prompted'] = all_confirmed_trips.apply(lambda row: conditional_surveys.survey_prompted_for_trip(row.to_dict(), wrapped_config), axis=1)\n",
     "    \n",
-    "    for survey_name in list(sheet_list.keys()):\n",
-    "        if survey_name in all_confirmed_trips['survey_name_prompted'].unique():\n",
-    "            total_dfs[survey_name] = all_confirmed_trips[all_confirmed_trips['survey_name_prompted'] == survey_name]\n",
-    "        else:\n",
-    "            #never prompted\n",
-    "            total_dfs[survey_name] = pd.DataFrame()\n",
-    "else:\n",
-    "    survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
-    "    total_dfs[survey_name] = all_confirmed_trips\n",
+    "#     for survey_name in list(sheet_list.keys()):\n",
+    "#         if survey_name in all_confirmed_trips['survey_name_prompted'].unique():\n",
+    "#             total_dfs[survey_name] = all_confirmed_trips[all_confirmed_trips['survey_name_prompted'] == survey_name]\n",
+    "#         else:\n",
+    "#             #never prompted\n",
+    "#             total_dfs[survey_name] = pd.DataFrame()\n",
+    "# else:\n",
+    "#     survey_name = list(sheet_list.keys())[0] #there is only one if non-conditional\n",
+    "#     total_dfs[survey_name] = all_confirmed_trips\n",
     "\n",
-    "for key in total_dfs.keys():\n",
-    "    if len(total_dfs[key]) > 0:\n",
-    "        print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")\n",
-    "    else:\n",
-    "        print(key, \":\", len(total_dfs[key]), \"trips\")"
+    "# for key in total_dfs.keys():\n",
+    "#     if len(total_dfs[key]) > 0:\n",
+    "#         print(key, \":\", len(total_dfs[key]), \"trips\", total_dfs[key].user_id.nunique(), \"users\")\n",
+    "#     else:\n",
+    "#         print(key, \":\", len(total_dfs[key]), \"trips\")"
    ]
   },
   {
@@ -345,8 +345,9 @@
     "#create one plot per question in the survey\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
-    "    debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
-    "\n",
+    "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
+    "    debug_df = pd.DataFrame() #survey filtering still buggy, omitting all features of \"num trips survey presented\"\n",
+    "    \n",
     "    for col in quest_dict[survey_name].keys():\n",
     "        filename = col + file_suffix\n",
     "        plot_title_no_quality = survey_name + \"\\n\" + quest_dict[survey_name][col]\n",
@@ -357,8 +358,9 @@
     "            quest_frame[col].replace('', np.nan, inplace=True)\n",
     "            quest_frame.dropna(subset=[col], inplace=True)\n",
     "            \n",
-    "            qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
-    "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "#             qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
+    "#             plot_title = plot_title_no_quality+'\\n'+qual_text\n",
+    "            plot_title = plot_title_no_quality\n",
     "            \n",
     "            fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "\n",
