add survey metrics to the front end
naming the charts from the specific notebook so they don't get overwritten by the other nbs with a _survey suffix

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_total{file_suffix_sensed}'\n",
+    "file_name = f'ntrips_total_survey{file_suffix_sensed}'\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "\n",
     "try:\n",
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = f'ntrips_under80{file_suffix_sensed}'\n",
+    "file_name = f'ntrips_under80_survey{file_suffix_sensed}'\n",
     "\n",
     "try:\n",
     "    # Preprocess to find cutoff and filter below cutoff\n",
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode by land\"\n",
-    "file_name =f\"total_trip_length_land{file_suffix_sensed}\"\n",
+    "file_name =f\"total_trip_length_land_survey{file_suffix_sensed}\"\n",
     "\n",
     "try:\n",
     "    ## We do an existence check for the labeled df because we want to display the sensed value even if we don't have the labeled value\n",
