remove testing-only code

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -7,17 +7,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2024\n",
-    "month = 4\n",
+    "year = None\n",
+    "month = None\n",
     "year = None\n",
     "month = None\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = 'e-bike'\n",
-    "include_test_users = False\n",
+    "mode_of_interest = None\n",
+    "include_test_users = True\n",
     "dynamic_labels = {}\n",
     "use_imperial = False\n",
-    "survey_info =  {}"
+    "survey_info =  {\n",
+    "    \"surveys\": {\n",
+    "      \"UserProfileSurvey\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-onboarding-v1.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/demographic_survey\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      },\n",
+    "      \"DfcEvReturnTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-return-trip-v1.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      },\n",
+    "      \"DfcEvRoamingTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-ev-roaming-trip-v1.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      },\n",
+    "      \"DfcGasTrip\": {\n",
+    "        \"formPath\": \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/survey_resources/dfc-fermata/dfc-gas-trip-v1.xml\",\n",
+    "        \"version\": 1,\n",
+    "        \"compatibleWith\": 1,\n",
+    "        \"dataKey\": \"manual/trip_user_input\",\n",
+    "        \"labelTemplate\": { \"en\": \"Answered\" }\n",
+    "      }\n",
+    "    },\n",
+    "    \"buttons\": {\n",
+    "      \"trip-label\": [\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcGasTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"Gas Car Survey\" },\n",
+    "          \"showsIf\": \"confirmedMode?.baseMode == 'CAR'\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcEvRoamingTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
+    "          \"showsIf\": \"confirmedMode?.baseMode == 'E_CAR' && !pointIsWithinBounds(end_loc['coordinates'], [[-105.118, 39.719], [-105.115, 39.717]])\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"surveyName\": \"DfcEvReturnTrip\",\n",
+    "          \"not-filled-in-label\": { \"en\": \"EV Survey\" },\n",
+    "          \"showsIf\": \"confirmedMode?.baseMode == 'E_CAR' && pointIsWithinBounds(end_loc['coordinates'], [[-105.118, 39.719], [-105.115, 39.717]])\"\n",
+    "        }\n",
+    "      ]\n",
+    "    },\n",
+    "    \"trip-labels\": \"ENKETO\"\n",
+    "  }"
    ]
   },
   {
@@ -249,7 +300,7 @@
     "#we need to filter out trips (based on if including test users)\n",
     "all_confirmed_trips = scaffolding.filter_composite_trips(all_confirmed_trips, program, include_test_users)\n",
     "\n",
-    "if len(all_confirmed_trips) > 0:\n",
+    "try:\n",
     "    #remove blank inputs\n",
     "    survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
     "\n",
@@ -260,7 +311,7 @@
     "    #gather the cols needed for charts and text\n",
     "    survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
     "    \n",
-    "else:\n",
+    "except:\n",
     "    survey_trips = pd.DataFrame()\n",
     "\n",
     "survey_trips.groupby('survey_name').count()"
@@ -344,7 +395,7 @@
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
     "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
-    "    debug_df = pd.DataFrame() #survey filtering still buggy, omitting all features of \"num trips survey presented\"\n",
+    "    debug_df = generate_debug_df(program, include_test_users, all_confirmed_trips, df_responses) #survey filtering still buggy, omitting all features of \"num trips survey presented\"\n",
     "    \n",
     "    for col in quest_dict[survey_name].keys():\n",
     "        filename = col + file_suffix\n",
