use correct debug frame

--- a/viz_scripts/survey_metrics.ipynb
+++ b/viz_scripts/survey_metrics.ipynb
@@ -244,9 +244,9 @@
     "    set_title_and_save(fig, text_results, plot_title_no_quality, file_name)    \n",
     "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
     "    plt.clf()\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)        \n",
-    "    alt_html = store_alt_html_missing(merged_debug_df, file_name, plot_title_no_quality)\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df_sensed, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, plot_title_no_quality)        \n",
+    "    alt_html = store_alt_html_missing(debug_df_sensed, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
